--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,8 @@
   "main": "src/index.js",
   "scripts": {
     "start": "react-scripts start",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "react-scripts build"
   },
   "keywords": [],
   "author": "",
@@ -12,6 +13,7 @@
   "description": "",
   "dependencies": {
     "axios": "^1.6.8",
+    "build": "^0.1.4",
     "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
